# enterprise-ai-knowledge-platform

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: base.py  orchestrator.py  reasoning.py  retriever.py  validator.py
app/context/: context_models.py  context_resolver.py
app/core/: config.py
app/llm/: gateway.py  models.py  observability.py
app/memory/: models.py  service.py  store.py
app/middleware/: request_id.py
app/routes/admin/: observability.py
app/routes/ask/: ask.py
app/routes/documents/: list.py  upload.py
app/routes/query/: query.py
app/services/: answer_service.py  chunking_service.py  document_service.py  embedding_service.py  prompt_service.py  query_service.py  text_extraction_service.py  text_normalization_service.py  vector_store_service.py
app/tools/: audit.py  gateway.py  registry.py
data/text/: 3484d379-a8ee-463e-8119-0e7a6b7c4684.txt  607ae7df-6693-44f4-9670-400c0c5fab73.txt  9494daaf-5910-4d62-8303-49efe7d66348.txt  be74171d-4525-4418-ba43-168bf09e8ac1.txt  c1dcb9c2-7d99-40fc-9d3c-d93328826f26.txt
web/: .gitignore  package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/admin/: page.tsx
web/src/app/upload/: page.tsx
web/src/lib/: api.ts
