[project]
name = "eakdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "pinecone>=8.0.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
